# nix-sweep

./: Cargo.toml  LICENSE  README.md  flake.nix
src/: caching.rs  config.rs  files.rs  fmt.rs  gc.rs  generations.rs  interaction.rs  journal.rs  main.rs  profiles.rs  roots.rs  store.rs  store_paths.rs
src/commands/: add_root.rs  analyze.rs  cleanout.rs  completions.rs  gc.rs  gc_roots.rs  generations.rs  list_presets.rs  man.rs  mod.rs  path_info.rs  presets.rs  tidyup_gc_roots.rs
src/nix/: mod.rs  profiles.rs  roots.rs  store.rs
src/utils/: caching.rs  files.rs  fmt.rs  interaction.rs  journal.rs  mod.rs  ordered_channel.rs  terminal.rs
