[package]
name = "nix-sweep"
version = "0.4.0"
edition = "2021"
description = "Utility to clean up old Nix profile generations and left-over garbage collection roots"
repository = "https://github.com/jzbor/nix-sweep"
license = "MIT"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
clap_mangen = "0.2.26"
colored = "3.0.0"
duration-str = { version = "0.17.0", default-features = false, features = ["serde", "calc"] }
rayon = "1.10.0"
rustc-hash = "2.1.1"
serde = { version = "1.0.219", features = ["derive"] }
size = "0.5.0"
toml = "0.8.21"
xdg = "2.5.2"

[profile.release]
lto = true

[profile.profiling]
inherits = "release"
debug = true
