[package]
name = "nix-sweep"
version = "0.5.1"
edition = "2021"
description = "Utility to clean up old Nix profile generations and left-over garbage collection roots"
repository = "https://github.com/jzbor/nix-sweep"
license = "MIT"

[dependencies]
async-recursion = "1.1.1"
clap = { version = "4.5.20", features = ["derive"] }
clap_mangen = "0.2.26"
colored = "3.0.0"
duration-str = { version = "0.17.0", default-features = false, features = ["serde", "calc"] }
futures = "0.3.31"
rustc-hash = "2.1.1"
serde = { version = "1.0.219", features = ["derive"] }
size = "0.5.0"
tokio = { version = "1.46.1", features = ["fs", "macros", "rt", "rt-multi-thread"] }
tokio-stream = { version = "0.1.17", features = ["fs"] }
toml = "0.8.21"
xdg = "3.0.0"

[profile.release]
lto = true

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
